Fix Loader on small screens

--- a/less/figure.less
+++ b/less/figure.less
@@ -31,6 +31,14 @@
   }
 }
 
+@media screen and ( max-width: 1000px ) {
+  .figure {
+    &_loader {
+      display: none;
+    }
+  }
+}
+
 @media screen and ( max-width: 850px ) {
   .figure {
     &_button {
