--- a/less/header.less
+++ b/less/header.less
@@ -45,6 +45,7 @@
   &_video {
     height: 100%;
     position: relative;
+    z-index: 20;
 
     video {
       height: 100%;
